# wasp_ws

./: .gitignore
src/wasp_bringup/: CMakeLists.txt  README.md  package.xml
src/wasp_bringup/config/: copter.parm  gazebo-iris.parm  position.yaml
src/wasp_bringup/launch/: gimbal.launch.py  precision_landing.launch.py  simple.launch.py  sitl.launch.py  wasp.launch.py  wasp_spawn.launch.py
src/wasp_bringup/models/aruco_marker/: model.config  model.sdf
src/wasp_bringup/models/aruco_marker/materials/scripts/: marker.material
src/wasp_bringup/models/camera/: model.config  model.sdf
src/wasp_bringup/models/fpv_cam/: fpv_cam.sdf
src/wasp_bringup/models/gimbal_small_2d_new/: model.sdf
src/wasp_bringup/models/iris/: iris.sdf
src/wasp_bringup/models/iris_ardupilot/: model.config  model.sdf
src/wasp_bringup/models/iris_fpv_cam/: iris_fpv_cam.sdf
src/wasp_bringup/models/iris_rangefinder/: model.config  model.sdf
src/wasp_bringup/models/iris_with_ardupilot/: model.config  model.sdf
src/wasp_bringup/models/lidar/: model.sdf
src/wasp_bringup/src/: GimbalSmall2dPlugin.cc
src/wasp_bringup/worlds/: empty.world  gimbal.world  iris_arducopter_runway.world
src/wasp_description/: README.md  package.xml  setup.cfg  setup.py
src/wasp_description/models/aruco_land/: model.config  model.sdf
src/wasp_description/models/aruco_land/materials/scripts/: aruco_land.material
src/wasp_description/urdf/: uav.gazebo  uav.xacro
src/wasp_gazebo/: CMakeLists.txt  package.xml
src/wasp_gazebo/include/fdcl/: common_types.hpp  ros_utils.hpp
src/wasp_gazebo/src/: control_plugin.cpp  test_plug.cc
src/wasp_gazebo/worlds/: precision_landing.world  simple.world
src/wasp_precise_landing/: README.md
src/wasp_precise_landing/examples/: landing_target.py  read_aruco.py
src/wasp_simulator/: package.xml  setup.cfg  setup.py
src/wasp_simulator/wasp_simulator/: control.py  estimator.py  gui.py  main.py  reset_uav.py  rover.py
